--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -17,6 +17,9 @@ jobs:
         python-version: [ '3.8', '3.9', '3.10', '3.11' ]
 
     steps:
+
+      - uses: actions/checkout@v4
+
       - name: Checkout project
         uses: actions/checkout@v2
 
@@ -29,7 +32,6 @@ jobs:
         # The `bdist_wheel` command requires the `wheel` package
         run: |
           python3 -m pip install --upgrade pip
-          python3 -m pip install --upgrade wheel
           python3 -m pip freeze
 
       - name: Ubuntu Deps
@@ -39,16 +41,30 @@ jobs:
             sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
           fi
 
-      - name: Build Wheel from Scratch
+      - name: Cache build folder
+        id: cache-cpp
+        uses: actions/cache@v3
+        with:
+          path: ./vtk/build
+          key: ${{ runner.os }}-python-${{ matrix.python-version }}-cpp-build-${{ hashFiles('**/CMakeLists.txt', '**/*.cpp', '**/*.h') }}
+          restore-keys: |
+            ${{ runner.os }}-python-${{ matrix.python-version }}-cpp-build-
+
+      - name: Compile from Scratch
+        if: steps.cache-cpp.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
           mkdir -p ./vtk/build
-          wget https://www.vtk.org/files/release/9.2/VTK-9.2.5.tar.gz  # Update this for newer releases of VTK
-          tar -zxf VTK-9.2.5.tar.gz --directory ./vtk/
+          wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
+          tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           cd ./vtk/build
-          cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release ../VTK-9.2.5
-          ninja
-          python3 setup.py bdist_wheel
+          cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_APPLE_SILICON_PROCESSOR="arm64" -DCMAKE_C_FLAGS="-Wno-error=incompatible-function-pointer-types" -DCMAKE_BUILD_TYPE=Release -DVTK_VERSION_SUFFIX="" -DVTK_DIST_NAME_SUFFIX="cadquery" ../VTK-9.2.6
+          ninja -j3
+
+      - name: Build wheel
+        shell: bash -l {0}
+        run: |
+          python3 -m build -n -w
           cd ../../
           find ./ -iname *.whl
 
