--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -27,19 +27,26 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Setup Python Env
-        shell: bash -l {0}
-        # The `bdist_wheel` command requires the `wheel` package
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip freeze
-
       - name: Ubuntu Deps
         shell: bash -l {0}
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
           fi
+
+      - name: MacOS Deps
+        shell: bash -l {0}
+        run: |
+          if [ "$RUNNER_OS" == "macOS" ]; then
+            brew install ninja
+          fi
+
+      - name: Setup Python Env
+        shell: bash -l {0}
+        # The `bdist_wheel` command requires the `wheel` package
+        run: |
+          python3 -m pip install --upgrade pip
+          python3 -m pip freeze build
 
       - name: Cache build folder
         id: cache-cpp
@@ -58,9 +65,6 @@ jobs:
           wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
           tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
           echo "Building VTK"
-          ls -la ./vtk/
-          echo "Entering build directory"
-          ls -la ./vtk/build
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_APPLE_SILICON_PROCESSOR="arm64" -DCMAKE_C_FLAGS="-Wno-error=incompatible-function-pointer-types" -DCMAKE_BUILD_TYPE=Release -DVTK_VERSION_SUFFIX="" -DVTK_DIST_NAME_SUFFIX="cadquery" ../VTK-9.2.6
           ninja -j3
