--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -13,7 +13,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ 'macos-13', 'macos-14' ]
+        # os: [ 'macos-13', 'macos-14' ]
+        os: [ 'macos-14' ]
         python-version: [ '3.11' ]
 
     steps:
