--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -46,7 +46,8 @@ jobs:
         shell: bash -l {0}
         # The `bdist_wheel` command requires the `wheel` package
         run: |
-          python3 -m pip install --upgrade pip build
+          python3 -m pip install --upgrade pip 
+          python3 -m pip install build
           python3 -m pip freeze 
 
       - name: Cache build folder
