--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -46,9 +46,10 @@ jobs:
         shell: bash -l {0}
         # The `bdist_wheel` command requires the `wheel` package
         run: |
-          python3 -m pip install --upgrade pip 
-          python3 -m pip install build
-          python3 -m pip freeze 
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade wheel
+          python -m pip install --upgrade build
+          python -m pip freeze 
 
       - name: Cache build folder
         id: cache-cpp
