--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -28,11 +28,16 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Check Python version  # Add this to debug
+        run: |
+          which python
+          python --version
+
       - name: Ubuntu Deps
         shell: bash -l {0}
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-            sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python3-dev python3-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
+            sudo apt install -y build-essential cmake mesa-common-dev mesa-utils freeglut3-dev python-dev python-venv git-core ninja-build cmake wget libglvnd0 libglvnd-dev
           fi
 
       - name: MacOS Deps
@@ -46,11 +51,11 @@ jobs:
         shell: bash -l {0}
         # The `bdist_wheel` command requires the `wheel` package
         run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install --upgrade wheel
-          python3 -m pip install --upgrade build
-          python3 -m pip install --upgrade setuptools
-          python3 -m pip freeze 
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade wheel
+          python -m pip install --upgrade build
+          python -m pip install --upgrade setuptools
+          python -m pip freeze 
 
       - name: Cache build folder
         id: cache-cpp
@@ -76,7 +81,7 @@ jobs:
       - name: Build wheel
         shell: bash -l {0}
         run: |
-          python3 -m build -n -w
+          python -m build -n -w
           cd ../../
           find ./ -iname *.whl
 
