--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -13,21 +13,34 @@ jobs:
 
     strategy:
       matrix:
-        # os: [ 'macos-13', 'macos-14' ]
-        os: [ 'macos-14' ]
-        python-version: [ '3.11' ]
+        # os: ['macos-13', 'macos-14']
+        # python-version: ['3.10', '3.11', '3.12']
+        os: ['macos-14']
+        python-version: ['3.11']
+        include:
+          # - os: 'macos-13'
+          #   arch: x86_64
+          #   target: x86_64-apple-darwin
+          - os: 'macos-14'
+            arch: arm64
+            target: arm64-apple-darwin
 
     steps:
 
       - uses: actions/checkout@v4
 
-      - name: Checkout project
-        uses: actions/checkout@v2
-
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          architecture: ${{ matrix.arch == 'x86_64' && 'x64' || 'arm64' }}
 
+      - name: Set Architecture
+        id: set-arch
+        shell: bash
+        run: |
+          echo "arch=${{ matrix.arch }}" >> $GITHUB_OUTPUT
+          echo "target=${{ matrix.target }}" >> $GITHUB_OUTPUT
+                    
       - name: Ubuntu Deps
         shell: bash -l {0}
         run: |
@@ -44,22 +57,20 @@ jobs:
 
       - name: Setup Python Env
         shell: bash -l {0}
-        # The `bdist_wheel` command requires the `wheel` package
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --upgrade wheel
-          python -m pip install --upgrade build
-          python -m pip install --upgrade setuptools
+          python -m pip install --upgrade wheel build setuptools
           python -m pip freeze 
+
+      - name: Download vtk
+        run: |
+          mkdir -p ./vtk/build
+          wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
+          tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
 
       - name: Cache build folder
         id: cache-cpp
         uses: actions/cache@v3
-        # with:
-        #   path: ./vtk/build
-        #   key: ${{ runner.os }}-python-${{ matrix.python-version }}-cpp-build-${{ hashFiles('**/CMakeLists.txt', '**/*.cpp', '**/*.h') }}
-        #   restore-keys: |
-        #     ${{ runner.os }}-python-${{ matrix.python-version }}-cpp-build-
         with:
           path: |
             build
@@ -71,17 +82,20 @@ jobs:
       - name: Compile from Scratch
         if: steps.cache-cpp.outputs.cache-hit != 'true'
         shell: bash -l {0}
+        env:
+          # Explicitly set ARM64 architecture
+          CFLAGS: "-target ${{ matrix.target }}"
+          CXXFLAGS: "-target ${{ matrix.target }}"  
         run: |
-          mkdir -p ./vtk/build
-          wget https://www.vtk.org/files/release/9.2/VTK-9.2.6.tar.gz  # Update this for newer releases of VTK
-          tar -zxf VTK-9.2.6.tar.gz --directory ./vtk/
-          echo "Building VTK"
           cd ./vtk/build
           cmake -GNinja -DVTK_WHEEL_BUILD=ON -DVTK_WRAP_PYTHON=ON \
                 -DCMAKE_C_FLAGS="-Wno-error=incompatible-function-pointer-types" \
                 -DCMAKE_BUILD_TYPE=Release -DVTK_VERSION_SUFFIX="" \
                 -DVTK_DIST_NAME_SUFFIX=cadquery \
-                -DCMAKE_OSX_ARCHITECTURES=arm64 \
+                -DCMAKE_OSX_ARCHITECTURES=${{ matrix.arch }} \
+                -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} \
+                -DCMAKE_HOST_SYSTEM_PROCESSOR=${{ matrix.arch }} \
+                -DCMAKE_BUILD_TYPE=Release \
                 ../VTK-9.2.6
           ninja -j6
 
